# sdl2-rust-test

./: Cargo.toml  README.md
src/: game.rs  main.rs
